# qt-demo

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  app.sh  clean.bat  clean.sh
include/pages/: MainWindow.h
src/: main.cpp
src/pages/: MainWindow.cpp  MainWindow.ui
translations/: zh_CN.ts
